updates to forms

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,8 +1,9 @@
-<formaction="https://formspree.io/f/mkndnqlr" method="POST" name="contact" class="cfForm">
-	<input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />
+<form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm">
 	<div class="formFlex">
 		<div class="formSmallInputs inputWrapper">
-			<input class="" name="NAME" type="text" placeholder="NAME" /><input class="" name="EMAIL" type="text" placeholder="EMAIL" /><input class="" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
+			<input class="" name="NAME" type="text" placeholder="NAME" />
+			<input class="" name="EMAIL" type="text" placeholder="EMAIL" />
+			<input class="" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
 		</div>
 		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
 	</div>
