--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -2,16 +2,16 @@
     <h2>CONTACT US now for a consultation</h2>
     <section class="formSection">
         <h5 class="formSection__Heading">REQUEST A CONSULTATION</h5>
-        <form action="/" class="cfForm" method="post" name="contact">
-            <input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />
-            <div class="formFlex">
-                <div class="formSmallInputs inputWrapper">
-                    <input type="text" class="" name="NAME" placeholder="NAME" /><input type="text" class="" name="EMAIL" placeholder="EMAIL" />
-                    <input type="text" class="" name="PHONE NUMBER" placeholder="PHONE NUMBER" />
-                </div>
-                <div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
-            </div>
-            <input type="submit" class="formSubmit" value="submit" />
-        </form>
+      <form action="https://formspree.io/f/mkndnqlr" method="POST" class="cfForm">
+      <div class="formFlex">
+          <div class="formSmallInputs inputWrapper">
+              <input class="" name="NAME" type="text" placeholder="NAME" />
+              <input class="" name="EMAIL" type="text" placeholder="EMAIL" />
+              <input class="" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
+          </div>
+          <div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
+      </div>
+      <input type="submit" class="formSubmit" value="submit" />
+      </form>
     </section>
 </div>
