--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,16 +46,7 @@
                     {{ content }}
 					<section class="formSection">
 						<h5 class="formSection__Heading editable">REQUEST A CONSULTATION</h5>
-						<form action="{{site.data.general_settings.contact_form_action_url}}" class="cfForm" method="post" name="contact">
-							<input type="hidden" name="bot-field" />+ <input type="hidden" name="form-name" value="contact" />
-							<div class="formFlex">
-								<div class="formSmallInputs inputWrapper">
-									<input type="text" class="" name="NAME" placeholder="NAME" /><input type="text" class="" name="EMAIL" placeholder="EMAIL" /><input type="text" class="" name="PHONE NUMBER" placeholder="PHONE NUMBER" />
-								</div>
-								<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
-							</div>
-							<input type="submit" class="formSubmit" value="submit" />
-						</form>
+						{% include form.html %}
 					</section>
                      {% include footer.html %}
 
