--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/new_styles.css" />
         <title data-react-helmet="true">McCormick Law Firm</title>
         <link data-react-helmet="true" rel="canonical" href="" />
         <meta data-react-helmet="true" charset="utf-8" />
