--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/new_styles.css" />
+        <script src="https://kit.fontawesome.com/178160c53c.js" crossorigin="anonymous"></script>
         <link data-react-helmet="true" rel="canonical" href="{{page.url}}" />
         {% capture seo %}{% seo %}
          <meta name="keywords" content="{{page.keywords}}" />
@@ -45,7 +47,7 @@
                    {% include header.html %}
                     <section class="home">
                         {{ content }}
-                        {% include footer.html %}
+<!--                        {% include footer.html %}-->
                     </section>
                 </div>
             </div>
