--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 {% assign general_data = site.data.general_settings %}
 <footer class="maxWidth">
     {% if general_data.footer_logo_url %}
-     <div class="footer__Col">
-      <img class="footer__Logo img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}" />
+     <div class="">
+      <img class="order-1 footer__Logo img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}" />
      </div>
     {% endif %}
-    <div class="footer__Col footer__Address">
+    <div class="order-3 footer__Address">
         {% if general_data.address %}
          <p>{{ general_data.address.address }}</p>
         {% endif %}
@@ -23,14 +23,14 @@
          <a href="tel:{{general_data.phone}}">{{ general_data.phone }}</a>
         {% endif %}
         
-        <div class="socials--desktop">
+        <div class="d-block socials--desktop">
             <p class="footer__SocialText">CONNECT WITH US</p>
             {% for social_account in general_data.social_accounts %}
              <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
             {% endfor %}
         </div>
     </div>
-    <div class="footer__Col footer__Statement">
+    <div class="mt-0 order-2 footer__Statement">
         {% if general_data.footer_title %}
          <h6>{{ general_data.footer_title }}</h6>
         {% endif %}
