--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -15,24 +15,24 @@
 <!--      </form>-->
 <!--    </section>-->
 <!--</div>-->
-<div class="d-sm-flex flex-row pageHero__Form">
-    <h2 class="text-white">CONTACT US NOW FOR A CONSULTATION</h2>
+<div class="d-flex flex-row justify-content-center contact-form px-5 py-5">
+    <h2 class="text-white col-lg-3 display-2 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
     <form action="https://formspree.io/f/mkndnqlr" method="POST"
-          class="d-md-flex align-content-center justify-content-md-start h-100 pe-3 form-container new-form cfForm">
+          class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-6 mx-xl-5 pt-5">
         <div class="field-group inputs-container">
             <div class="mb-3">
-                <input type="email" class="form-control" id="inputName" placeholder="NAME">
+                <input type="email" class="form-control opacity-25" id="inputName" placeholder="NAME">
             </div>
             <div class="mb-3">
-                <input type="email" class="form-control" id="inputEmail1" placeholder="EMAIL">
+                <input type="email" class="form-control opacity-25" id="inputEmail1" placeholder="EMAIL">
             </div>
             <div class="mb-3">
-                <input type="text" class="form-control" id="inputPhone1" placeholder="PHONE NUMBER">
+                <input type="text" class="form-control opacity-25" id="inputPhone1" placeholder="PHONE NUMBER">
             </div>
         </div>
         <div class="field-group message-container">
             <div class="mb-3">
-                <textarea type="text" class="form-control" id="inputMessage1" placeholder="MESSAGE"></textarea>
+                <textarea type="text" class="form-control opacity-25" id="inputMessage1" placeholder="MESSAGE"></textarea>
             </div>
             <input type="submit" class="d-block ms-lg-auto formSubmit" value="submit" />
         </div>
