--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -16,7 +16,7 @@
 <!--    </section>-->
 <!--</div>-->
 <div class="d-flex flex-row justify-content-center contact-form px-5 py-5">
-    <h2 class="text-white col-lg-3 display-2 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
+    <h2 class="text-white col-xl-3 col-lg-6 display-2 d-flex align-items-center justify-content-center pb-5 px-5">CONTACT US NOW FOR A CONSULTATION</h2>
     <form action="https://formspree.io/f/mkndnqlr" method="POST"
           class="d-flex align-content-center justify-content-md-start form-container new-form cfForm col-lg-6 mx-xl-5 pt-5">
         <div class="field-group inputs-container">
