Completely rebuilt info nav, redesigned submit and link buttons for forms, footer positioning

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -6,6 +6,9 @@
 			<input class="" name="PHONE NUMBER" type="text" placeholder="PHONE NUMBER" />
 		</div>
 		<div class="formLargeInputs inputWrapper"><textarea class="inputLarge" name="MESSAGE" placeholder="MESSAGE"></textarea></div>
+
 	</div>
-	<input type="submit" class="formSubmit" value="submit" />
+	<div class="d-flex align-items-end">
+		<input type="submit" class="formSubmit-Mobile col-5 col-sm-3" value="submit" />
+	</div>
 	</form>
