--- a/assets/css/new_styles.css
+++ b/assets/css/new_styles.css
@@ -70,6 +70,10 @@
 /*CONTACT FORM DESKTOP*/
 /**/
 
+.index-info-color{
+    color: rgba(0, 46, 59, 1);
+}
+
 .contact-form {
     background-color: #002e3b;
     /*color: #ffffff;*/
@@ -115,6 +119,21 @@ input.form-control, textarea.form-control {
     padding-right: 3rem
 }
 
+.formSubmit-Mobile {
+    background-color: #002e3b;
+    text-transform: uppercase;
+    margin-left: auto;
+    color: #fff;
+    padding: 1.2rem 2.2rem;
+}
+.formSubmit-Desktop {
+    background-color: #fff;
+    text-transform: uppercase;
+    margin-left: auto;
+    color: #002e3b;
+    padding: 1.2rem 2.2rem;
+}
+
 /**/
 /*HOME*/
 /**/
@@ -136,6 +155,16 @@ input.form-control, textarea.form-control {
     background-color: hsla(0,0%,43.9%,.25);
 }
 
+.learn-more-btn {
+    background-color: transparent;
+    color: black;
+    border-color: black;
+}
+.learn-more-btn:hover {
+    background-color: transparent;
+    color: black;
+    border-color: black;
+}
 
 .custom-service {
     /*margin-right: .2rem !important;*/
