--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,49 +1,59 @@
 {% assign general_data = site.data.general_settings %}
-<footer class="maxWidth">
-    {% if general_data.footer_logo_url %}
-    <div class="col-6">
-      <img class="order-1 footer__Logo img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}" />
-    </div>
-    <div class="col-auto bg-primary">
-    </div>
+<footer class="d-flex justify-content-center py-5">
+    <div class="px-5">
+        {% if general_data.footer_logo_url %}
+        <div class="d-flex col-8 justify-content-center">
+          <img class="img-fluid" src="{{ general_data.footer_logo_url }}" alt="{{ general_data.site_title }}" />
+        </div>
+        {% endif %}
+        <div class="py-4">
+            {% if general_data.address %}
+            {{ general_data.address.address }}
+            {% endif %}
+            <div class="position-relative col-8">
+                <a href="{{ general_data.google_map_url }}" class="w-100 h-100">
+                    <address class="position-relative ">
+                        503 W University Ave
+                        Lafayette, LA 70506
+                    </address>
+                </a>
+            </div>
 
-    {% endif %}
-    <div class="order-3 footer__Address">
-        {% if general_data.address %}
-         <p>{{ general_data.address.address }}</p>
-        {% endif %}
-        <a href="{{ general_data.google_map_url }}">
-        <address>
-            503 W University Ave
-            
-            Lafayette, LA 70506
-        </address>
-        </a>
-        {% if general_data.address %}
-         <a href="mailto:{{ general_data.email }}">{{ general_data.email }}</a>
-        {% endif %}
-        {% if general_data.phone %}
-         <a href="tel:{{general_data.phone}}">{{ general_data.phone }}</a>
-        {% endif %}
-        
-        <div class="d-block socials--desktop">
-            <p class="footer__SocialText">CONNECT WITH US</p>
-            {% for social_account in general_data.social_accounts %}
-             <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
-            {% endfor %}
+            {% if general_data.address %}
+            <div class="position-relative col-5 ">
+                <a href="mailto:{{ general_data.email }}" class="w-100 h-100">{{ general_data.email }}</a>
+            </div>
+            {% endif %}
+            {% if general_data.phone %}
+            <div class="position-relative col-3 ">
+                <a href="tel:{{general_data.phone}}" class="w-100 h-100">{{ general_data.phone }}</a>
+            </div>
+            {% endif %}
+            <div class="py-4 col-10 col-md-6 ">
+                <h6 class="text-primary fs-1 py-4">
+                VETERAN OWNED
+                20 YEARS EXPERIENCE
+                </h6>
+            </div>
+            <div class="position-relative col-4 ">
+                <p class=" ">CONNECT WITH US</p>
+                {% for social_account in general_data.social_accounts %}
+                 <a href="{{social_account.url}}"><img src="{{social_account.icon}}" alt="{{social_account.url}}" /></a>
+                {% endfor %}
+            </div>
         </div>
-    </div>
-    <div class="mt-0 order-2 footer__Statement">
-        {% if general_data.footer_title %}
-         <h6>{{ general_data.footer_title }}</h6>
-        {% endif %}
-        <div class="socials--mobile">
-            <p class="footer__SocialText">CONNECT WITH US</p>
-            {% for social_account in general_data.social_accounts %}
-            <a href="{{social_account.url}}">
-             <img src="{{social_account.icon}}" alt="{{social_account.url}}" />
-            </a>
-            {% endfor %}
-        </div>
+<!--        <div class="mt-0 order-2 footer__Statement">-->
+<!--            {% if general_data.footer_title %}-->
+<!--             <h6>{{ general_data.footer_title }}</h6>-->
+<!--            {% endif %}-->
+<!--            <div class="socials&#45;&#45;mobile">-->
+<!--                <p class="footer__SocialText">CONNECT WITH US</p>-->
+<!--                {% for social_account in general_data.social_accounts %}-->
+<!--                <a href="{{social_account.url}}">-->
+<!--                 <img src="{{social_account.icon}}" alt="{{social_account.url}}" />-->
+<!--                </a>-->
+<!--                {% endfor %}-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </footer>
